# money-mapper

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ACCEPTANCE_CRITERIA_VERIFICATION.md  CHANGELOG.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  LOCAL_VALIDATION_RESULTS.md  MYPY_TYPE_ERRORS_DETAILED.md  Makefile  PHASE_0_UAT_SUMMARY.md  README.md  UAT_TEST_PLAN.md  UAT_TEST_SCRIPT.py  audit_test_results.txt  full_test_results.txt  full_test_results2.txt  full_test_results3.txt  mapping_io_test_results.txt  mapping_io_test_results2.txt  mypy_errors.txt  pr_template_body.md  precommit_test_results.txt  pyproject.toml  requirements.txt  statement2json.py  test_output.txt  validate.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  privacy_security.yml
.github/workflows/: ci.yml  cleanup-branches.yml
.local/: CLEANUP_CHECKLIST.md  Makefile
.local/scripts/: check_all.ps1  ci-failures.ps1  organize-local-files.ps1  organize-local-files.sh
config/: merchant_mappings.toml  new_mappings.toml  personal_mappings.toml  plaid_categories.toml  private_mappings.toml  public_mappings.toml  public_settings.toml  settings.toml  statement_patterns.toml
config/templates/: private_mappings.toml  private_settings.toml
docs/: BRANCH_CLEANUP_WORKFLOW.md  DEVELOPMENT.md  RELEASE_NOTES_TEMPLATE.md
models/: .gitignore
scripts/: check_all.ps1  check_all.sh  cleanup-branches.bat  cleanup-branches.sh
src/: cli.py  config_manager.py  interactive_mapper.py  mapping_processor.py  setup_wizard.py  statement_parser.py  transaction_enricher.py  utils.py
src/money_mapper/: __init__.py  cli.py  community_flow.py  config_manager.py  csv_importer.py  interactive_mapper.py  mapping_conflict_resolver.py  mapping_consolidator.py  mapping_io.py  mapping_processor.py  mapping_validator.py  ml_categorizer.py  privacy_audit.py  privacy_guard.py  privacy_precommit.py  setup_wizard.py  similarity_matcher.py  statement_parser.py  transaction_enricher.py  utils.py  web_command.py
src/money_mapper/api/: __init__.py  server.py  validation.py
src/money_mapper/api/static/js/: transactions.js
src/money_mapper/api/templates/: base.html  dashboard.html  import.html  import_result.html  mappings.html  settings.html  transactions.html
tests/: __init__.py  conftest.py  test_api_server.py  test_api_validation.py  test_cli.py  test_cli_simple.py  test_cli_web.py  test_community_flow.py  test_config_manager.py  test_csv_importer.py  test_integration.py  test_interactive_mapper.py  test_mapping_conflict_resolver.py  test_mapping_consolidator.py  test_mapping_io.py  test_mapping_processor.py  test_mapping_validator.py  test_ml_categorizer.py  test_privacy_audit.py  test_privacy_guard.py  test_privacy_precommit.py  test_rebuild_model.py  test_setup_wizard.py  test_similarity_matcher.py  test_statement_parser.py  test_transaction_enricher.py  test_utils.py
tests/fixtures/: enriched_test.json  sample.ofx  sample.qfx  sample_mappings.toml  sample_transactions.json
tests/fixtures/sample_statements/: bofa_checking_2024_01.csv  bofa_credit_2024_01.csv  bofa_credit_v2_2024_01.csv  bofa_savings_2024_01.csv  capitalone_credit_2024_01.csv  chase_checking_2024_01.csv  chase_credit_2024_01.csv  checking_2024_01.csv  discover_credit_2024_01.csv  wellsfargo_checking_2024_01.csv
