[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "money-mapper"
version = "0.7.0"
description = "Financial transaction parser and categorizer using Plaid PFC taxonomy"
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.5.0",
    "toml>=0.10.2",
    "scikit-learn>=1.4.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=2.7.0"
]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "bandit>=1.9.0",
    "pip-audit>=2.10.0",
    "pre-commit>=3.0.0",
    "httpx>=0.25.0",
    "actionlint-py>=1.7.11",
    "sentence-transformers>=2.7.0",
    "ofxtools>=0.9.5",
    "types-toml>=0.10.8"
]

[project.scripts]
money-mapper = "money_mapper.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C90",
    "UP",
    "B",
    "A",
]
ignore = [
    "E501",      # Line too long (handled by formatter)
    "W291",      # Trailing whitespace
    
    # Deferred violations - acceptable tradeoffs (reviewed Phase 6)
    "C901",      # Function complexity (28 violations) - requires refactoring
    "B007",      # Unused loop variables (2 violations) - style issue
    "E722",      # Bare except statements (2 violations) - intentional error suppression
    "E741",      # Ambiguous variable names (1 violation) - style issue
    "F821",      # Undefined names (1 violation) - edge case handling
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/money_mapper --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/money_mapper"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.poe.tasks]
cleanup-branches = "bash scripts/cleanup-branches.sh"
